<resources>
    <string name="app_name">My cv</string>
    <string name="personal_Detail">Personal Detail</string>
    <string name="gmail">Gmail</string>
    <string name="nandoakbar42">nandoakbar42</string>
    <string name="instagram">Instagram</string>
    <string name="nandopqrstu">nandopqrstu</string>
    <string name="my_skills">My Skills</string>
    <string name="about_me">About Me</string>
    <string name="experience">Experience</string>
    <string name="nando_akbar_johansyah">Nando Akbar Johansyah</string>
    <string name="portofolio">Portofolio</string>
    <string name="aplikasi_bangun_datar">Aplikasi bangun datar</string>
    <string name="multiple_auth_dan_crud_ci">Multiple auth dan crud CI</string>
    <string name="crud_dan_export_dengan_ci">Crud dan export dengan CI</string>
    <string name="auth_dan_crud_dengan_laravel">Auth dan crud dengan Laravel</string>
    <string name="fiture">Fiture :</string>
    <string name="apps_info">Apps info</string>
    <string name="to">to :</string>
    <string name="message">Message :</string>
    <string name="send">Send</string>
    <string name="phone_number">Phone number</string>
    <string name="_0821_1244_8145">0821 1244 8145</string>
    <string name="no_wa">No wa :</string>
    <string name="_0856_9582_4761">0856 9582 4761</string>
    <string name="no_hp_dan_telegram">No hp dan Telegram :</string>
    <string name="nandoakbar42_gmail_com">nandoakbar42@gmail.com</string>
    <string name="contact">Contact</string>
    <string name="call">Call</string>
</resources>
