<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:weightSum="10"
    android:layout_height="match_parent"
    tools:context=".New_telp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <TextView
            android:id="@+id/textGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="34sp"
            android:textColor="@android:color/white"
            android:layout_centerInParent="true"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/nando_akbar_johansyah"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="30sp" />



    </RelativeLayout>

    <GridLayout
        android:id="@+id/mainGrid"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:columnCount="1"
        android:rowCount="3"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:padding="14dp">

        <!--whatsapp-->
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="16dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_hp_dan_telegram"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="30sp">

                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_0821_1244_8145"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp"
                    >

                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/no_wa"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="30sp">

                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_0856_9582_4761"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp"
                    >

                </TextView>

                <Button
                    android:id="@+id/dial"
                    android:layout_width="329dp"
                    android:layout_marginTop="50dp"
                    android:background="@color/colorPrimary"
                    android:textColor="#fff"
                    android:layout_height="wrap_content"
                    android:text="@string/call"
                    android:onClick="onDialButton"
                    >

                </Button>




            </LinearLayout>



        </android.support.v7.widget.CardView>

    </GridLayout>

</LinearLayout>